native/crates/specular-interact/tests/snapshots/tools__clicking_with_the_text_tool_places_plain_text_and_starts_editing_it.snap
---
source: crates/specular-interact/tests/tools.rs
expression: app.doc_snapshot()
---
nodes:
  {"id":"e220a8397b1dcdaf","type":"text","x":220,"y":140,"width":88,"height":20,"text":"","color":"1","specular":{"textStyle":"plain","widthMode":"auto","colorRole":"neutral","textSize":14,"textFont":"sans"}}
edges:
specular: {"entityOrder":["e220a8397b1dcdaf"]}
