native/crates/specular-interact/tests/snapshots/tools__dragging_with_the_shape_tool_sizes_a_shape_on_the_grid.snap
---
source: crates/specular-interact/tests/tools.rs
expression: app.doc_snapshot()
---
nodes:
  {"id":"e220a8397b1dcdaf","type":"shape","x":100,"y":100,"width":140,"height":80,"shapeKind":"rectangle","text":"","color":"1","strokeWidth":2,"specular":{"textSize":14}}
edges:
specular: {"entityOrder":["e220a8397b1dcdaf"]}
